# computer-vision-projects

.github/: CODEOWNERS
project3/: CMakeLists.txt  README.md
project3/include/: p3_db.hpp  p3_embedding.hpp  p3_embedding.hpp   p3_segmentation.hpp
project3/src/: main.cpp  p3_db.cpp  p3_embedding.cpp  p3_features.cpp  p3_segmentation.cpp
